2005-08-15  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: new string functions: strnlen, strndup replacement
	* feature: updated win32 project (removed c++ exception handling,
	fixed release custom build), removed some warnings 

2005-08-14  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: added initial implementation for config file helper
	* feature: added more functions to wzd_string_t
	* doc: updated inline documentation

2005-08-04  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: address comparison function matching wrong strings
	* bugfix: use or freed memory in address comparison function
	* feature: added test file for wzd_ip.c

2005-07-27  Pierre Chifflier  <pollux@wzdftpd.net>

	* code: moved arch-specific code to arch/win32.h

2005-07-26  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: added new experimental MODA command
	* feature: enable utf8 in autobuilder

2005-07-22  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: add rpm spec file to distribution

2005-07-18  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: block signals when creating child threads to avoid multiple
	reception problems

2005-07-15  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: split directory src/ into libwzd-core/ and wzdftpd/

2005-07-13  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: MacOS X support !
	* feature: added libgnutls.m4 file to distributed files,
	so you don't need libgnutls-dev to run bootstrap

2005-07-09  Pierre Chifflier  <pollux@wzdftpd.net>

	* First release since migration to svn
	* --- svn commit TAG: rel-0-5-4

2005-07-06  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: infinite loop on date_close with some clients
	* bugfix: block signals when creating modules

2005-07-02  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: site purge causing crash
	* bugfix: workaround uid and gid problem in mysql backend
	* feature: all tables renamed to lowercase (mysql) - see
	backends/mysql/UPGRADING for upgrade method
